<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beacon</string>
    <string name="action_settings">Settings</string>
    <string name="string_Search">SEARCH</string>
    <string name="string_Report">REPORT</string>
    <string name="string_Locations">LOCATIONS</string>
    <string name="string_DateTime">Date and Time</string>
    <string name="string_Search_Ask">Who are you looking for?</string>
    <string name="string_Search_Location">Search for Evacuation Centers</string>
    <string name="string_Search_Location_by_Type">Search by Type</string>
    <string name="string_Report_Ask">Who are you reporting?</string>
    <string name="string_Status_Ask">What is their Status?</string>
    <string name="string_Location_Ask">Where is ____ found?</string>
    <string name="string_Rescue_Ask">Where is ___?</string>
    <string name="string_Contact_Ask">Where can we reach you?</string>
    <string name="string_instruction_EnterFullName">Please enter full name</string>
    <string name="string_instruction_ReportStatus">Please choose status</string>
    <string name="string_instruction_EnterLocation">Please enter location</string>
    <string name="string_instruction_Contact_Number">Please enter your mobile number</string>
    <string name="string_reminder_StaySafe">Stay Safe, Name!</string>
    <string name="string_Thank_You">Thank you for your help!</string>
    <string name="string_inform_you">We will inform you when ___ is found.</string>
    <string name="string_sorry">We are very sorry for the loss.</string>
    <string name="string_stay_safe">Stay safe.</string>

    <string-array name="string_array_status">
        <item>Found Alive</item>
        <item>Missing</item>
        <item>Needs Rescue</item>
        <item>Found Dead</item>
    </string-array>

	<string-array name="Location_array">
	    <item>Search by Type</item>
        <item>Nearest to my Location</item>
        <item>Hospitals</item>
        <item>Churches</item>
        <item>Schools</item>
        <item>Police Stations</item>
        <item>Fire Stations</item>
    </string-array>
    
    <string name="title_activity_report_person">ReportPerson</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_found_person">FoundPerson</string>
    <string name="title_activity_rescue_person">RescuePerson</string>
    <string name="title_activity_inform_querier">InformQuerier</string>
    <string name="title_activity_disp_sad_message">DispSadMessage</string>
    <string name="mapView">Map</string>
    <string name="title_activity_search_person">SearchPerson</string>

</resources>
