<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/color_BeaconTeal"
    tools:context=".MainActivity" >
	
    <LinearLayout
        android:id="@+id/linear_contactQuerier"
        android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true">
                
        <TextView 
            android:id="@+id/text_AskContact"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="30sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_Contact_Ask"/>
        
        <EditText 
            android:id="@+id/text_EnterPhoneNumber"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="18sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:textColorHint="@color/color_BeaconWhite"
	        android:hint="@null"
	        android:maxLines="1"
	        android:singleLine="true"
	        android:inputType="phone"/>
        
        <TextView 
            android:id="@+id/text_ContactInstruction"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="60dp"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="12sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_instruction_Contact_Number"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear_message"
        android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:visibility="gone">

        <TextView 
            android:id="@+id/text_ThankYou"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="30sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_Thank_You"/>
        
        <TextView 
            android:id="@+id/text_InformYou"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="18sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_inform_you"
	        android:layout_marginBottom="60dp"/>       
    </LinearLayout>

</RelativeLayout>
