<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/color_BeaconTeal"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:id="@+id/linearlayout_home"
        android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true">

        <TextView 
            android:id="@+id/text_DayTime"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="16sp"
	        android:textColor="@color/color_BeaconNotWhite"
	        android:text="@string/string_DateTime" />
        
	    <Button 
			android:id="@+id/button_Search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="8sp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:onClick="buttonCalls"
			android:textSize="28sp"
			android:fontFamily="sans-serif-light"
			android:textStyle="bold"
			android:background="@color/color_BeaconTeal"
	        android:textColor="@drawable/selector_text_color_change"
			android:text="@string/string_Search"/>
	    
		<Button 
			android:id="@+id/button_Report"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="18dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_marginBottom="70dp"
			android:onClick="buttonCalls"
			android:textSize="28sp"
			android:fontFamily="sans-serif-light"
			android:textStyle="bold"
			android:background="@color/color_BeaconTeal"
	        android:textColor="@drawable/selector_text_color_change"
			android:text="@string/string_Report"/>

	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/linear_inputName"
        android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:visibility="gone">
		
        <TextView 
            android:id="@+id/text_SearchAsk"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="26sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_Search_Ask"/>

        <EditText 
            android:id="@+id/text_EnterFullName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="18sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:textColorHint="@color/color_BeaconWhite"
	        android:hint="@null"
	        android:maxLines="1"
	        android:singleLine="true"/>
        
        <TextView 
            android:id="@+id/text_NameInstruction"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="60dp"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="12sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_instruction_EnterFullName"/>
        
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/linear_reportName"
        android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:visibility="gone">

        <TextView 
            android:id="@+id/text_ReportAsk"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="30sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_Report_Ask"/>
        
        <EditText 
            android:id="@+id/text_ReportFullName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="18sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:textColorHint="@color/color_BeaconWhite"
	        android:hint="@null"
	        android:maxLines="1"
	        android:singleLine="true"
	        android:imeOptions="actionNext"/>
        
        <TextView 
            android:id="@+id/text_ReportNameInstruction"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="60dp"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="12sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_instruction_EnterFullName"/>
        
	</LinearLayout>
</RelativeLayout>
