<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/color_BeaconTeal"
    tools:context=".MainActivity" >
	
    <LinearLayout
        android:id="@+id/linear_reportName"
        android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true">

        <TextView 
            android:id="@+id/text_ReportAsk"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="30sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_Report_Ask"/>
        
        <EditText 
            android:id="@+id/text_ReportFullName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="18sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:textColorHint="@color/color_BeaconWhite"
	        android:hint="@null"
	        android:maxLines="1"
	        android:singleLine="true"/>
        
        <TextView 
            android:id="@+id/text_ReportNameInstruction"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="60dp"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="12sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_instruction_EnterFullName"/>
        
	</LinearLayout>
	
   <LinearLayout
        android:id="@+id/linear_reportStatus"
        android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:visibility="gone">
        
        <Spinner
		    android:id="@+id/spinner_status"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:entries="@array/string_array_status"
       	 	android:prompt="@string/string_instruction_ReportStatus"/>
        
        <TextView 
            android:id="@+id/text_ReportStatusInstruction"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="60dp"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light"
	        android:textSize="12sp"
	        android:textColor="@color/color_BeaconWhite"
	        android:text="@string/string_instruction_ReportStatus"/>
        
	</LinearLayout>
</RelativeLayout>